# RxC

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.c  main2.c  observers.h
src/: c_lambda.h  c_prototype.c  c_prototype.h  c_rexpr.h  observer.c  observer.h  observers.h  reflection.h  rx_error.c  rx_error.h  rx_observer.c  rx_observer.h  rx_smart_pointer.c  rx_smart_pointer.h  rx_utility.h  rx_utility_operators.h  rxc.h  rxc_combining.h  rxc_creating.h  rxc_error.c  rxc_error.h  rxc_filtering.c  rxc_filtering.h  rxc_observable_utility.h  rxc_transforming.h  rxc_utility_operators.h  scheduler.h  smart_pointer.c  smart_pointer.h  utility.h
src/combining/: rx_combining.h
src/creating/: creating.c  creating.h  defer.c  from.c  just.c  range.c  repeat.c  rx_create.c  rx_creating.h  rx_defer.c  rx_from.c  rx_interval.c  rx_just.c  rx_range.c  rx_repeat.c  rx_start.c  rx_timer.c  start.c  timer.c
src/filtering/: debounce.c  distinct.c  filter.c  filtering.h  last.c  rx_debounce.c  rx_distinct.c  rx_element_at.c  rx_filter.c  rx_filtering.h  rx_ignore_elements.c  rx_last.c  rx_sample.c  rx_skip.c  rx_skip_last.c  rx_take.c  rx_take_last.c  skip.c  skip_last.c  take.c
src/functional/: c_functional.h  rx_functional.h
src/prototype/: c_prototype.h  rx_prototype.c  rx_prototype.h
src/transforming/: rx_buffer.c  rx_map.c  rx_transforming.h
